Remove the override from krish package
Remove the override from krish package
Extend the package and the console
Change laravel 5 blade tag
Change publich configuration to split it with the view
Add documentation laravel 5

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "php": ">=5.5.0",
     "illuminate/support": "5.*",
     "illuminate/html": "5.*",
+    "illuminate/filesystem": "5.*",
     "kris/laravel-form-builder": "1.*"
   },
   "require-dev": {
