Add trait for the controller
Add trait for the controller
Change Input in Request
Add default template for the state
Add Permission Utils binding
Add new line in configuration for the permission
Add Example with controller usage

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
       "email": "kezho@me.com"
     }
   ],
+  "minimum-stability": "stable",
   "require": {
     "php": ">=5.5.0",
     "illuminate/support": "5.*",
@@ -24,6 +25,5 @@
     "files": [
       "src/helpers.php"
     ]
-  },
-  "minimum-stability": "stable"
+  }
 }
