--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "illuminate/support": "5.*",
     "illuminate/html": "5.*",
     "illuminate/filesystem": "5.*",
-    "kris/laravel-form-builder": "1.*"
+    "kris/laravel-form-builder": "1.3.6"
   },
   "require-dev": {
     "orchestra/database": "~3.0",
