--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
   - 5.5.9
   - 5.5
   - 5.6
+  - 7
 
 env:
   global:
@@ -18,14 +19,26 @@ matrix:
 
 sudo: false
 
+before_install:
+  - if [[ $TRAVIS_PHP_VERSION =~ ^7 ]]; then phpenv config-rm xdebug.ini; fi
+  - composer self-update
+
 install:
   - if [[ $setup = 'basic' ]]; then travis_retry composer install --no-interaction --prefer-source; fi
   - if [[ $setup = 'stable' ]]; then travis_retry composer update --prefer-source --no-interaction --prefer-stable; fi
   - if [[ $setup = 'lowest' ]]; then travis_retry composer update --prefer-source --no-interaction --prefer-lowest --prefer-stable; fi
 
-
-script: phpunit --configuration phpunit.xml --coverage-clover=coverage.clover
+script:
+  - >
+    if [[ $TRAVIS_PHP_VERSION =~ ^7 ]]; then
+      phpdbg -qrr vendor/phpunit/phpunit/phpunit --coverage-clover=coverage.clover --coverage-text;
+    else
+     phpunit --configuration phpunit.xml --coverage-clover=coverage.clover
+    fi
 
 after_script:
  - wget https://scrutinizer-ci.com/ocular.phar
  - php ocular.phar code-coverage:upload --access-token="9857f9bb4b1c260b94eb773a541d6e42e05db0db45d5a25757590276d5e50445" --format=php-clover coverage.clover
+
+notifications:
+  slack: big-boss-studio:vLrsJ3hpqgIYugU7IKLMUwj2
