--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,8 @@
   "require": {
     "php": ">=5.6.4",
     "illuminate/support": "5.3.*",
-    "illuminate/html": "5.*",
     "illuminate/filesystem": "5.3.*",
-    "kris/laravel-form-builder": "1.3.6"
+    "kris/laravel-form-builder": "1.9.*"
   },
   "require-dev": {
     "orchestra/database": "~3.3",
