--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,19 @@
       "email": "kezho@me.com"
     }
   ],
-  "minimum-stability": "stable",
   "require": {
     "php": ">=5.6.4",
-    "illuminate/support": "5.3.*",
-    "illuminate/filesystem": "5.3.*",
+    "illuminate/support": "5.4.*",
+    "illuminate/filesystem": "5.4.*",
     "kris/laravel-form-builder": "1.6.12"
   },
   "require-dev": {
-    "orchestra/database": "~3.3",
-    "orchestra/testbench": "~3.3",
-    "phpunit/phpunit": "~4.5",
+    "orchestra/database": "3.4.*",
+    "orchestra/testbench": "3.4.*",
+    "orchestra/testbench-browser-kit": "3.4.*",
+    "phpunit/phpunit": "~5.7",
     "mockery/mockery": "0.9.*",
-    "fzaninotto/faker": "1.4.*"
+    "fzaninotto/faker": "1.6.*"
   },
   "autoload": {
     "classmap": [
@@ -32,5 +32,7 @@
     "files": [
       "src/helpers.php"
     ]
-  }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
