--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,17 @@
     }
   ],
   "require": {
-    "php": ">=5.6.4",
-    "illuminate/support": "5.4.*",
-    "illuminate/filesystem": "5.4.*",
+    "php": ">=7",
+    "illuminate/support": "5.5.*",
+    "illuminate/filesystem": "5.5.*",
     "kris/laravel-form-builder": "1.6.12"
   },
   "require-dev": {
-    "orchestra/database": "3.4.*",
-    "orchestra/testbench": "3.4.*",
-    "orchestra/testbench-browser-kit": "3.4.*",
-    "phpunit/phpunit": "~5.7",
-    "mockery/mockery": "0.9.*",
+    "orchestra/database": "3.5.*",
+    "orchestra/testbench": "3.5.*",
+    "orchestra/testbench-browser-kit": "3.5.*",
+    "phpunit/phpunit": "~6.0",
+    "mockery/mockery": "~1.0",
     "fzaninotto/faker": "1.6.*"
   },
   "autoload": {
