--- a/composer.json
+++ b/composer.json
@@ -9,18 +9,18 @@
     }
   ],
   "require": {
-    "php": ">=7",
-    "illuminate/support": "5.5.*",
-    "illuminate/filesystem": "5.5.*",
+    "php": ">=7.1.3",
+    "illuminate/support": "5.6.*",
+    "illuminate/filesystem": "5.6.*",
     "kris/laravel-form-builder": "1.6.12"
   },
   "require-dev": {
-    "orchestra/database": "3.5.*",
-    "orchestra/testbench": "3.5.*",
-    "orchestra/testbench-browser-kit": "3.5.*",
-    "phpunit/phpunit": "~6.0",
+    "orchestra/database": "3.6.*",
+    "orchestra/testbench": "3.6.*",
+    "orchestra/testbench-browser-kit": "3.6.*",
+    "phpunit/phpunit": "~7.0",
     "mockery/mockery": "~1.0",
-    "fzaninotto/faker": "1.6.*"
+    "fzaninotto/faker": "~1.4"
   },
   "autoload": {
     "classmap": [
