--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "php": ">=7.1.3",
     "illuminate/support": "5.6.*",
     "illuminate/filesystem": "5.6.*",
-    "kris/laravel-form-builder": "1.6.12"
+    "kris/laravel-form-builder": "1.6.12",
+    "cloudinary/cloudinary_php": "dev-master"
   },
   "require-dev": {
     "orchestra/database": "3.6.*",
