--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "orchestra/database": "3.8.*",
     "orchestra/testbench": "3.8.*",
     "orchestra/testbench-browser-kit": "3.8.*",
-    "phpunit/phpunit": "7.*",
+    "phpunit/phpunit": "~7.0",
     "mockery/mockery": "~1.0",
     "fzaninotto/faker": "~1.4"
   },
