--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,17 @@
     }
   ],
   "require": {
-    "php": ">=7.1.3",
-    "illuminate/support": "5.7.*",
-    "illuminate/filesystem": "5.7.*",
+    "php": "^7.2",
+    "illuminate/support": "5.8.*",
+    "illuminate/filesystem": "5.8.*",
     "kris/laravel-form-builder": "1.6.12",
     "cloudinary/cloudinary_php": "dev-master"
   },
   "require-dev": {
-    "orchestra/database": "3.7.*",
-    "orchestra/testbench": "3.7.*",
-    "orchestra/testbench-browser-kit": "3.7.*",
-    "phpunit/phpunit": "~7.0",
+    "orchestra/database": "3.8.*",
+    "orchestra/testbench": "3.8.*",
+    "orchestra/testbench-browser-kit": "3.8.*",
+    "phpunit/phpunit": "~8.0",
     "mockery/mockery": "~1.0",
     "fzaninotto/faker": "~1.4"
   },
