--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     }
   ],
   "require": {
-    "php": "^7.2",
+    "php": ">=7.1.3",
     "illuminate/support": "5.8.*",
     "illuminate/filesystem": "5.8.*",
     "kris/laravel-form-builder": "1.6.12",
