--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,17 @@
   ],
   "require": {
     "php": ">=7.1.3",
-    "illuminate/support": "5.8.*",
-    "illuminate/filesystem": "5.8.*",
-    "kris/laravel-form-builder": "1.6.12",
+    "illuminate/support": "5.8.*|^6.0",
+    "illuminate/filesystem": "5.8.*|^6.0",
+    "kris/laravel-form-builder": "1.*",
     "cloudinary/cloudinary_php": "dev-master"
   },
   "require-dev": {
-    "orchestra/database": "3.8.*",
-    "orchestra/testbench": "3.8.*",
-    "orchestra/testbench-browser-kit": "3.8.*",
-    "phpunit/phpunit": "~7.0",
-    "mockery/mockery": "~1.0",
+    "orchestra/database": "3.8.*|^4.0",
+    "orchestra/testbench": "3.8.*|^4.0",
+    "orchestra/testbench-browser-kit": "3.8.*|^4.0",
+    "phpunit/phpunit": "~7.0|^8.3",
+    "mockery/mockery": "~1.0|^1.2.3",
     "fzaninotto/faker": "~1.4"
   },
   "autoload": {
